--- a/pratice/src/counter.css
+++ b/pratice/src/counter.css
@@ -5,6 +5,23 @@
 
 .teemo{
     display: flex;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     margin-left: 30rem;
+}
+
+.fk{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+
+.container {
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center; /* Centers vertically */
+    height: 10rem; /* Full height of the viewport */
+}
+
+.input {
+    width: 80%; /* Set a width for the input */
 }
